--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "build:docs": "docgeni build",
     "start": "ng serve",
     "build": "ng build",
+    "start:docs": "docgeni serve --port 4600",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -23,8 +25,11 @@
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^15.2.10",
     "@angular/cli": "~15.2.9",
     "@angular/compiler-cli": "^15.2.0",
+    "@docgeni/cli": "^2.2.0",
+    "@docgeni/template": "2.2.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
@@ -32,6 +37,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "ng-packagr": "^15.2.2",
     "typescript": "~4.9.4"
   }
 }
